[FIX] text-align for scmall screens [FIX] Favicon

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -86,12 +86,14 @@ div#aboutUsContainer {
 span.genericHeader {
     font-size: 3rem;
     margin-bottom: 20px;
+    text-align: center;
     align-self: center;
 }
 
 span.genericText {
     font-size: 1.5rem;
     max-width: 800px;
+    text-align: center;
     align-self: center;
 }
 
